[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ladder"
version = "0.1.0"
description = "Software engineering agent harness that routes tasks to appropriate LLM tiers"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
ladder = "ladder.cli:main"
